[gd_scene load_steps=8 format=3 uid="uid://dec428gq6uwaf"]

[ext_resource type="Script" path="res://Game/LevelUp.gd" id="1_mq6u6"]
[ext_resource type="Texture2D" uid="uid://hu72411nm635" path="res://UI/plant-ui-box.png" id="2_8ut4r"]
[ext_resource type="FontFile" uid="uid://bumukosekroos" path="res://UI/Font/8bitOperatorPlus8-Regular.ttf" id="3_7q5pb"]
[ext_resource type="Texture2D" uid="uid://jrbfgbyoxkwp" path="res://UI/damage-icon.png" id="3_sdovc"]
[ext_resource type="Texture2D" uid="uid://ddtaq10068ro2" path="res://UI/firerate-icon.png" id="5_yfd7s"]
[ext_resource type="Texture2D" uid="uid://b74bbmsuiynke" path="res://UI/pierce-icon.png" id="6_ci76h"]

[sub_resource type="LabelSettings" id="LabelSettings_f3bve"]
font = ExtResource("3_7q5pb")
font_size = 10
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="LevelUp" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mq6u6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.227451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level Up"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="DamageButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_8ut4r")
texture_pressed = ExtResource("2_8ut4r")
texture_hover = ExtResource("2_8ut4r")
texture_focused = ExtResource("2_8ut4r")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/DamageButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_sdovc")
stretch_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Damage"
label_settings = SubResource("LabelSettings_f3bve")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="FireRateButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_8ut4r")
texture_pressed = ExtResource("2_8ut4r")
texture_hover = ExtResource("2_8ut4r")
texture_focused = ExtResource("2_8ut4r")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer2/FireRateButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_yfd7s")
stretch_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Fire Rate"
label_settings = SubResource("LabelSettings_f3bve")

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PierceButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_8ut4r")
texture_pressed = ExtResource("2_8ut4r")
texture_hover = ExtResource("2_8ut4r")
texture_focused = ExtResource("2_8ut4r")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer3/PierceButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ci76h")
stretch_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Pierce"
label_settings = SubResource("LabelSettings_f3bve")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer2/FireRateButton" to="." method="_on_fire_rate_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer3/PierceButton" to="." method="_on_pierce_button_pressed"]
